[package]
name = "mqtt_client"
version = "0.1.0"
authors = ["liwumeng <910027178@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqtt = "0.31.0"
log = "0.4.14"
log4rs = {version="1",features = ["toml_format"]}
serde = { version = "1.0", features = ["derive"] }
toml="0.5.8"